Added unit tests for filtercollection

--- a/SimplePipeline/SimplePipeline.Tests/SimplePipeline.Tests.csproj
+++ b/SimplePipeline/SimplePipeline.Tests/SimplePipeline.Tests.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FilterCollectionTest.cs" />
     <Compile Include="FilterDataTest.cs" />
     <Compile Include="FilterTest.cs" />
     <Compile Include="PipelineTest.cs" />
