Moved most of the test data for unit testing to a seperate class

--- a/SimplePipeline/SimplePipeline.Tests/SimplePipeline.Tests.csproj
+++ b/SimplePipeline/SimplePipeline.Tests/SimplePipeline.Tests.csproj
@@ -48,6 +48,7 @@
     <Compile Include="FilterTest.cs" />
     <Compile Include="PipelineTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
