--- a/SimplePipeline/SimplePipeline.Tests/SimplePipeline.Tests.csproj
+++ b/SimplePipeline/SimplePipeline.Tests/SimplePipeline.Tests.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="FilterCollectionTest.cs" />
     <Compile Include="FilterDataTest.cs" />
+    <Compile Include="FilterTest.cs" />
     <Compile Include="PipelineTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestData.cs" />
