Added project for test filter implementations
Create project folder, and added references in test project

--- a/SimplePipeline/SimplePipeline.Tests.X/SimplePipeline.Tests.X.csproj
+++ b/SimplePipeline/SimplePipeline.Tests.X/SimplePipeline.Tests.X.csproj
@@ -63,6 +63,16 @@
   <ItemGroup>
     <Analyzer Include="..\packages\xunit.analyzers.0.7.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SimplePipeline.Tests.Filters\SimplePipeline.Tests.Filters.csproj">
+      <Project>{a88bbd0c-0709-4a62-af43-9e8c7cec9e10}</Project>
+      <Name>SimplePipeline.Tests.Filters</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SimplePipeline\SimplePipeline.csproj">
+      <Project>{885f31ac-bb57-40c4-b33e-0ce124c4ed27}</Project>
+      <Name>SimplePipeline</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
