--- a/SimplePipeline/SimplePipeline.Tests.X/SimplePipeline.Tests.X.csproj
+++ b/SimplePipeline/SimplePipeline.Tests.X/SimplePipeline.Tests.X.csproj
@@ -55,6 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FilterDataTest.cs" />
     <Compile Include="FilterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
