--- a/SimplePipeline/SimplePipeline.Tests.X/SimplePipeline.Tests.X.csproj
+++ b/SimplePipeline/SimplePipeline.Tests.X/SimplePipeline.Tests.X.csproj
@@ -61,6 +61,7 @@
     <Compile Include="FilterCollectionTest.cs" />
     <Compile Include="FilterDataTest.cs" />
     <Compile Include="FilterTest.cs" />
+    <Compile Include="PipelineTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
