Updated package details

--- a/SimplePipeline/SimplePipeline/SimplePipeline.csproj
+++ b/SimplePipeline/SimplePipeline/SimplePipeline.csproj
@@ -9,9 +9,17 @@
     <PackageLicenseUrl>https://github.com/JensYvanDeCraecker/SimplePipeline/blob/master/LICENSE.txt</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/JensYvanDeCraecker/SimplePipeline</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
-    <PackageTags>Pipeline, Filters, Interfaces, Easy, Simple</PackageTags>
+    <PackageTags>Pipeline, Filters, Interfaces, Easy, Simple, Framework</PackageTags>
     <PackageProjectUrl>https://github.com/JensYvanDeCraecker/SimplePipeline</PackageProjectUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes>- Updated behaviour of CanCreatePipeline in FilterCollection class: null in any of the parameters doesn't cause an exception, false will be returned if any of the parameters is null.
+- Updated summaries on various classes and members.
+- Added add methods in FilterCollection class that take a function and a pipeline
+- Added constructors in Pipeline class and FilterCollection class that take an enumerable
+FirstFilter and LastFilter properties in FilterCollection class
+- Various code optimisations
+- Rebuilt inner design of FilterCollection class</PackageReleaseNotes>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
