--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,7 @@
 version: 2.0.0.{build}
 image: Visual Studio 2017
+configuration: Release
+platform: Any CPU
 before_build:
 - cmd: nuget restore SimplePipeline/SimplePipeline.sln
 build:
