Optimised pipeline test data

--- a/SimplePipeline/SimplePipeline.Tests/SimplePipeline.Tests.csproj
+++ b/SimplePipeline/SimplePipeline.Tests/SimplePipeline.Tests.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Filters\ObjectToStringFilter.cs" />
     <Compile Include="Filters\ParseIntegerFilter.cs" />
     <Compile Include="FunctionTest.cs" />
+    <Compile Include="Pipelines\CountElementsPipeline.cs" />
     <Compile Include="Pipelines\EnumerableToArrayPipeline.cs" />
     <Compile Include="PipelineTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
